nuevo componente blog y blog-Herbal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,12 @@
             </a>
 
         </nav>
+        <nav class="flex-header-row">
+            <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/blog">
+                blog
+            </a>
+
+        </nav>
     </header>
 
     <section class="content">
