--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,31 @@ input[type="text"] {
 }
 
 /** #####################################################
+    #                 FLEX                              #
+    #####################################################*/
+    .flex-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      padding: 15px;
+    
+    }
+
+/** #####################################################
+  #                 TEXT ALIGNATION                   #
+  #####################################################*/
+
+    .rtl {
+      direction: rtl;
+      text-align: right;
+    }
+    
+    .ltr {
+      direction: ltr;
+      text-align: left;
+    }
+
+/** #####################################################
     #                Media                              #
     #####################################################*/
 @media (min-width: 500px) and (max-width: 768px) {
