--- a/src/styles.css
+++ b/src/styles.css
@@ -8,12 +8,24 @@ body {
   font-family: 'Be Vietnam Pro', sans-serif;
 }
 
+/** #####################################################
+    #                 PARAM COLORS                           #
+    #####################################################*/
 :root {
   --primary-color: #605DC8;
   --secondary-color: #8B89E6;
   --accent-color: #e8e7fa;
   --shadow-color: #E8E8E8;
   --honey-color: #efa909;
+  --svg-color: #f2f2f2;
+  --svg-color: #f2f2f2;
+
+  --facebook-color: #3b5998;
+  --facebook-hover-color: #3b5998;
+  --linkedin-color: #0077b5;
+  --linkedin-hover-color: #0077b5;
+  --instagram-color: #c13584;
+  --instagram-hover-color: #c13584;
 }
 
 button.primary {
@@ -43,6 +55,16 @@ input[type="text"] {
 }
 
 /** #####################################################
+    #                 GENERIC                           #
+    #####################################################*/
+
+svg {
+  fill: var(--svg-color);
+  height: "24";
+  width: "24";
+}
+
+/** #####################################################
     #                 FLEX                              #
     #####################################################*/
 .flex-container {
@@ -51,6 +73,55 @@ input[type="text"] {
   justify-content: space-evenly;
   padding: 15px;
 
+}
+
+.flex-container-col {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+/** #######################################################
+    #                ESTILOS BOTONES                          #
+    #######################################################*/
+
+.activebutton {
+  box-shadow: inset 0 1px 0 0 #dcecfb;
+  background: #f9d686 linear-gradient(to bottom, #f1d697 5%, #f9d686 100%);
+  border: 1px solid #eec669;
+  color: #000000;
+  text-shadow: 0 1px 0 #000000;
+}
+
+.social-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2px 5px;
+  border-radius: 5em;
+}
+
+.social-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: 0 10px;
+  background-color: var(--honey-color);
+  box-shadow: 0px 0px 4px var(--box-shadow-color);
+  transition: 0.3s;
+}
+
+.social-button:hover {
+  background-color: var(--honey-color);
+  box-shadow: 0px 0px 6px 3px var(--box-shadow-color);
+}
+
+.social-buttons svg {
+  transition: 0.3s;
+  height: 20px;
 }
 
 /** #####################################################
@@ -66,6 +137,75 @@ input[type="text"] {
   direction: ltr;
   text-align: left;
 }
+
+/** #####################################################
+    #                 SVG: SOCIAL MEDIAS                #
+    #####################################################*/
+
+    .facebook {
+      background-color: var(--facebook-color);
+    }
+    
+    .facebook:hover svg {
+      fill: var(--facebook-hover-color)
+    }
+    
+    .linkedin {
+      background-color: var(--linkedin-color);
+    }
+    
+    .linkedin:hover svg {
+      fill: var(--linkedin-hover-color)
+    }
+    
+    .instagram {
+      background-color: var(--instagram-color);
+    }
+    
+    
+    .instagram:hover svg {
+      fill: var(--instagram-hover-color)
+    }
+    
+    .whatsapp {
+      background-color: #4fec3a;
+    }
+    
+    .whatsapp:hover svg {
+      fill: #4fec3a;
+    }
+    
+    .youtube {
+      background-color: #fd1d1d;
+    }
+    
+    .youtube:hover svg {
+      fill: #fd1d1d;
+    }
+    
+    .twiter {
+      background-color: rgb(69, 187, 255);
+    }
+    
+    .twiter:hover svg {
+      fill: rgb(69, 187, 255);
+    }
+    
+    .gmail {
+      background-color: #fd1d1d;
+    }
+    
+    .gmail:hover svg {
+      fill: #fd1d1d;
+    }
+    
+    .telegram {
+      background-color: rgb(69, 187, 255);
+    }
+    
+    .telegram:hover svg {
+      fill: rgb(69, 187, 255);
+    }
 
 /** #####################################################
     #                Media                              #
