--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,73 +6,58 @@
   padding: var(--content-padding);
 }
 
-header{
+header {
   display: inline-flex;
   height: 60px;
   width: 100%;
   padding: var(--content-padding);
   box-shadow: 0px 5px 25px var(--shadow-color);
-  background-color:var(--main-color);
+  background-color: var(--main-color);
 }
-footer{
+
+footer {
   padding: var(--content-padding);
   box-shadow: 0px 5px 25px var(--shadow-color);
   background-color: var(--main-color);
 }
 
 
-section{
+section {
   min-height: 52rem
 }
 
 .containerHeader {
   width: 100%;
   height: 100%;
-  background: radial-gradient(
-        circle farthest-side at 0% 50%,
-        #282828 23.5%,
-        rgba(255, 170, 0, 0) 0
-      )
-      21px 30px,
-    radial-gradient(
-        circle farthest-side at 0% 50%,
-        #2c3539 24%,
-        rgba(240, 166, 17, 0) 0
-      )
-      19px 30px,
-    linear-gradient(
-        #282828 14%,
-        rgba(240, 166, 17, 0) 0,
-        rgba(240, 166, 17, 0) 85%,
-        #282828 0
-      )
-      0 0,
-    linear-gradient(
-        150deg,
-        #282828 24%,
-        #2c3539 0,
-        #2c3539 26%,
-        rgba(240, 166, 17, 0) 0,
-        rgba(240, 166, 17, 0) 74%,
-        #2c3539 0,
-        #2c3539 76%,
-        #282828 0
-      )
-      0 0,
-    linear-gradient(
-        30deg,
-        #282828 24%,
-        #2c3539 0,
-        #2c3539 26%,
-        rgba(240, 166, 17, 0) 0,
-        rgba(240, 166, 17, 0) 74%,
-        #2c3539 0,
-        #2c3539 76%,
-        #282828 0
-      )
-      0 0,
-    linear-gradient(90deg, #2c3539 2%, #282828 0, #282828 98%, #2c3539 0%) 0 0
-      #282828;
+  background: radial-gradient(circle farthest-side at 0% 50%,
+      #282828 23.5%,
+      rgba(255, 170, 0, 0) 0) 21px 30px,
+    radial-gradient(circle farthest-side at 0% 50%,
+      #2c3539 24%,
+      rgba(240, 166, 17, 0) 0) 19px 30px,
+    linear-gradient(#282828 14%,
+      rgba(240, 166, 17, 0) 0,
+      rgba(240, 166, 17, 0) 85%,
+      #282828 0) 0 0,
+    linear-gradient(150deg,
+      #282828 24%,
+      #2c3539 0,
+      #2c3539 26%,
+      rgba(240, 166, 17, 0) 0,
+      rgba(240, 166, 17, 0) 74%,
+      #2c3539 0,
+      #2c3539 76%,
+      #282828 0) 0 0,
+    linear-gradient(30deg,
+      #282828 24%,
+      #2c3539 0,
+      #2c3539 26%,
+      rgba(240, 166, 17, 0) 0,
+      rgba(240, 166, 17, 0) 74%,
+      #2c3539 0,
+      #2c3539 76%,
+      #282828 0) 0 0,
+    linear-gradient(90deg, #2c3539 2%, #282828 0, #282828 98%, #2c3539 0%) 0 0 #282828;
   background-size: 40px 60px;
 }
 
@@ -113,12 +98,23 @@ section{
 
   .menu__link {
     display: none;
-  } 
+  }
+
+  .flex-container {
+    flex-direction: column;
+    align-items: start;
+  }
 }
 
 @media (max-width: 499px) {
 
   .menu__link {
     display: none;
-  }    
+  }
+
+  .flex-container {
+    flex-direction: column;
+    align-items: start;
+
+  }
 }
