--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,6 @@ body {
   --shadow-color: #E8E8E8;
   --honey-color: #efa909;
   --svg-color: #f2f2f2;
-  --svg-color: #f2f2f2;
 
   --facebook-color: #3b5998;
   --facebook-hover-color: #3b5998;
@@ -26,6 +25,10 @@ body {
   --linkedin-hover-color: #0077b5;
   --instagram-color: #c13584;
   --instagram-hover-color: #c13584;
+}
+
+.honey-color {
+  color: var(--honey-color);
 }
 
 button.primary {
@@ -45,6 +48,16 @@ button.primary {
   justify-content: space-around;
 }
 
+/** #####################################################
+    #                 GENERIC                           #
+    #####################################################*/
+
+svg {
+  fill: var(--svg-color);
+  height: "24";
+  width: "24";
+}
+
 input[type="text"] {
   border: solid 1px var(--primary-color);
   padding: 10px;
@@ -54,14 +67,12 @@ input[type="text"] {
   width: 30%;
 }
 
-/** #####################################################
-    #                 GENERIC                           #
-    #####################################################*/
-
-svg {
-  fill: var(--svg-color);
-  height: "24";
-  width: "24";
+.title {
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  color: var(--honey-color);
 }
 
 /** #####################################################
@@ -142,70 +153,70 @@ svg {
     #                 SVG: SOCIAL MEDIAS                #
     #####################################################*/
 
-    .facebook {
-      background-color: var(--facebook-color);
-    }
-    
-    .facebook:hover svg {
-      fill: var(--facebook-hover-color)
-    }
-    
-    .linkedin {
-      background-color: var(--linkedin-color);
-    }
-    
-    .linkedin:hover svg {
-      fill: var(--linkedin-hover-color)
-    }
-    
-    .instagram {
-      background-color: var(--instagram-color);
-    }
-    
-    
-    .instagram:hover svg {
-      fill: var(--instagram-hover-color)
-    }
-    
-    .whatsapp {
-      background-color: #4fec3a;
-    }
-    
-    .whatsapp:hover svg {
-      fill: #4fec3a;
-    }
-    
-    .youtube {
-      background-color: #fd1d1d;
-    }
-    
-    .youtube:hover svg {
-      fill: #fd1d1d;
-    }
-    
-    .twiter {
-      background-color: rgb(69, 187, 255);
-    }
-    
-    .twiter:hover svg {
-      fill: rgb(69, 187, 255);
-    }
-    
-    .gmail {
-      background-color: #fd1d1d;
-    }
-    
-    .gmail:hover svg {
-      fill: #fd1d1d;
-    }
-    
-    .telegram {
-      background-color: rgb(69, 187, 255);
-    }
-    
-    .telegram:hover svg {
-      fill: rgb(69, 187, 255);
-    }
+.facebook {
+  background-color: var(--facebook-color);
+}
+
+.facebook:hover svg {
+  fill: var(--facebook-hover-color)
+}
+
+.linkedin {
+  background-color: var(--linkedin-color);
+}
+
+.linkedin:hover svg {
+  fill: var(--linkedin-hover-color)
+}
+
+.instagram {
+  background-color: var(--instagram-color);
+}
+
+
+.instagram:hover svg {
+  fill: var(--instagram-hover-color)
+}
+
+.whatsapp {
+  background-color: #4fec3a;
+}
+
+.whatsapp:hover svg {
+  fill: #4fec3a;
+}
+
+.youtube {
+  background-color: #fd1d1d;
+}
+
+.youtube:hover svg {
+  fill: #fd1d1d;
+}
+
+.twiter {
+  background-color: rgb(69, 187, 255);
+}
+
+.twiter:hover svg {
+  fill: rgb(69, 187, 255);
+}
+
+.gmail {
+  background-color: #fd1d1d;
+}
+
+.gmail:hover svg {
+  fill: #fd1d1d;
+}
+
+.telegram {
+  background-color: rgb(69, 187, 255);
+}
+
+.telegram:hover svg {
+  fill: rgb(69, 187, 255);
+}
 
 /** #####################################################
     #                Media                              #
