preparar los componentes para la configuracin del componente Switch-Lang para ser incluido en el Header

--- a/src/app/functionalities/switch-lang/switch-lang.component.html
+++ b/src/app/functionalities/switch-lang/switch-lang.component.html
@@ -1,1 +1,12 @@
-<p>switch-lang works!</p>
+<span class="form-inline">
+    <select 
+        class="form-control allIcon" 
+        #selectedLang 
+        (change)="switchLang(selectedLang.value)">
+      <option *ngFor="let language of translate.getLangs()" 
+        [value]="language"
+        [selected]="language === translate.currentLang">
+        {{ language }}
+      </option>
+    </select>
+  </span>
