--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,11 @@
             </a>
 
         </nav>
-        <app-menuburger></app-menuburger>
+        <div>
+            <app-switch-lang></app-switch-lang>
+            <app-menuburger></app-menuburger>
+        </div>
+        
     </header>
 
     <section class="content">
