--- a/src/app/blog/blog-herbal-honey/blog-herbal-honey.component.html
+++ b/src/app/blog/blog-herbal-honey/blog-herbal-honey.component.html
@@ -1,4 +1,4 @@
-<!-- <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <div class="flex-container">
         <div>
             <h3>{{'BenificesHerbalHoney.Title'| translate}}</h3>
@@ -6,13 +6,8 @@
             <h5>{{'BenificesHerbalHoney.TitleBenifit'| translate}}</h5>
         </div>
     </div>
-</section> -->
-<section>
-    <div class="flex-container">
-        <div>
-            <h3>Title</h3>
-            <p>PHerbalHoney</p>
-            <h5>TitleBenifit</h5>
-        </div>
-    </div>
 </section>
+<section>
+    <app-benefit></app-benefit>
+</section>
+
