--- a/src/app/blog/benefit/benefit.component.html
+++ b/src/app/blog/benefit/benefit.component.html
@@ -1,18 +1,1 @@
-<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-
-    <div>
-        <h5>{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</h5>
-        <ul class="listStyle">
-            <li>{{'BenificesHerbalHoney.Benifit1'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit2'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit3'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit4'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit5'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit6'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit7'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit8'| translate}}</li>
-            <li>{{'BenificesHerbalHoney.Benifit9'| translate}}</li>
-
-        </ul>
-    </div>
-</section>
+<p>benefit-honey works!</p>
