--- a/src/app/housing-location/details/details.component.html
+++ b/src/app/housing-location/details/details.component.html
@@ -28,4 +28,11 @@
         <button type="submit" class="primary">Apply now</button>
       </form> -->
     </section>
+    <section *ngIf="housingLocation?.category === 'HH'">
+      <app-benefit-herbal-honey></app-benefit-herbal-honey>
+    </section>
+    <section *ngIf="housingLocation?.category === 'HC'">
+      <h1>Es una prueba</h1>
+      <p>A la espra de definir y preparar el resto de tipos De momemnto solo tengo lso benificios de la miel Milaflores</p>
+    </section>
   </article>
