--- a/src/app/housing-location/details/details.component.html
+++ b/src/app/housing-location/details/details.component.html
@@ -1,22 +1,39 @@
-<article>
-    <img class="listing-photo" [src]="housingLocation?.photo"
-      alt="Exterior photo of {{housingLocation?.name}}"/>
-    <section class="listing-description">
-      <h2 class="listing-heading">{{housingLocation?.name}}</h2>
-      <p class="listing-location">{{housingLocation?.city}}</p>
-      <p class="listing-location"> {{housingLocation?.price}}</p>
-    </section>
-    <section class="listing-features">
-      <h2 class="section-heading">About this honey</h2>
-      <ul>
-        <li>Ubicación: {{housingLocation?.state}}</li>
-        <li>Categoria: {{housingLocation?.category}}</li>
+<article class="flex-container" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+  <!-- <div class="flex-container" 
+    [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">-->
+    <!-- <div class="flex-container-row"> -->
+    <div class="flex-container-col">
+      <section class="listing-description">
+        <h2 class="listing-heading">{{housingLocation?.name}}</h2>
+        <p class="listing-location">{{housingLocation?.city}}</p>
+        <p class="">Precio: {{housingLocation?.price}}</p>
 
-      </ul>
-    </section>
+        <ul>
+          <li>Ubicación: {{housingLocation?.state}}</li>
+          <li>Categoria: {{housingLocation?.category}}</li>
+        </ul>
+      </section>
+
+      <section *ngIf="housingLocation?.category === 'HH'">
+        <app-benefit-herbal-honey></app-benefit-herbal-honey>
+      </section>
+
+      <section *ngIf="housingLocation?.category === 'HC'">
+        <h1>Es una prueba</h1>
+        <p>A la espra de definir y preparar el resto de tipos De momemnto solo tengo lso benificios de la miel
+          Milaflores
+        </p>
+      </section>
+    </div>
+    <div>
+      <img class="listing-photo" [src]="housingLocation?.photo" alt="Exterior photo of {{housingLocation?.name}}" />
+    </div>
+
+    <!-- </div> -->
+
     <section class="listing-apply">
-      <h2 class="section-heading">Apply now to live here</h2>
-      <!-- <form [formGroup]="applyForm" (submit)="submitApplication()">
+      <!--<h2 class="section-heading">Apply now to live here</h2>
+      <form [formGroup]="applyForm" (submit)="submitApplication()">
         <label for="first-name">First Name</label>
         <input id="first-name" type="text" formControlName="firstName">
 
@@ -28,11 +45,6 @@
         <button type="submit" class="primary">Apply now</button>
       </form> -->
     </section>
-    <section *ngIf="housingLocation?.category === 'HH'">
-      <app-benefit-herbal-honey></app-benefit-herbal-honey>
-    </section>
-    <section *ngIf="housingLocation?.category === 'HC'">
-      <h1>Es una prueba</h1>
-      <p>A la espra de definir y preparar el resto de tipos De momemnto solo tengo lso benificios de la miel Milaflores</p>
-    </section>
-  </article>
+
+  <!-- </div> -->
+</article>
