--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,23 @@ input[type="text"] {
 }
 
 /** #####################################################
+    #                      ESTILO LISTAS                #
+    #####################################################*/
+    .listStyle {
+      list-style-type: disc;
+      margin-right: 15px;
+    }
+    
+    #textid ul {
+      list-style-type: disc;
+      margin-right: 15px;
+    }
+    
+    #textid ul li {
+      margin-right: 8px !important;
+    }
+
+/** #####################################################
     #                 FLEX                              #
     #####################################################*/
 .flex-container {
@@ -90,6 +107,12 @@ input[type="text"] {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
+}
+
+.flex-container-row {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
 }
 
 /** #######################################################
@@ -229,10 +252,16 @@ input[type="text"] {
   input[type="text"] {
     width: 70%;
   }
+  .flex-container{
+    flex-direction: column-reverse;
+  }
 }
 
 @media (max-width: 499px) {
   .results {
     grid-template-columns: 1fr;
+  }
+  .flex-container{
+    flex-direction: column-reverse;
   }
 }
