Limpieza de codigo y estructura de carpetas

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,7 +1,5 @@
 <section class="flex-container">
-
-    <section>
+    <P>soy el componete blog</P>
+    
         <app-blog-herbal-honey></app-blog-herbal-honey>
     </section>
-
-</section>
