--- a/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
@@ -1,4 +1,4 @@
-<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+<section class="flex-container" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
 
     <div>
         <h5>{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</h5>
