--- a/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
@@ -8,6 +8,7 @@
     </div>
 </section>
 <section>
-    <app-benefit></app-benefit>
+    <app-benefit-herbal-honey></app-benefit-herbal-honey>
 </section>
+
 
