--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,6 @@
 <section class="flex-container">
-    <P>soy el componete blog</P>
-    
+    <section>
         <app-blog-herbal-honey></app-blog-herbal-honey>
     </section>
+
+</section>
