--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,9 @@ button.primary {
   border-radius: 8px;
 }
 
+/** #####################################################
+    #   MOSTAR RESULTADO DE PORDUCTOS                   #
+    #####################################################*/
 .results {
   display: grid;
   column-gap: 14px;
@@ -47,6 +50,39 @@ button.primary {
   margin-top: 50px;
   justify-content: space-around;
 }
+
+.listing {
+  background: var(--accent-color);
+  border-radius: 30px;
+  padding-bottom: 30px;
+}
+.listing-heading {
+  color: var(--primary-color);
+  padding: 10px 20px 0 20px;
+}
+.listing-photo {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 30px 30px 0 0;
+}
+.listing-location {
+  padding: 10px 20px 20px 20px;
+}
+.listing-location::before {
+  content: url("/assets/location-pin.svg") / "";
+}
+
+section.listing a {
+  padding-left: 20px;
+  text-decoration: none;
+  color: var(--primary-color);
+}
+section.listing a::after {
+  content: "\203A";
+  margin-left: 5px;
+}
+
 
 /** #####################################################
     #                 GENERIC                           #
