--- a/src/app/housing-location/details/details.component.css
+++ b/src/app/housing-location/details/details.component.css
@@ -1,6 +1,6 @@
 .listing-photo {
   height: 600px;
-  width: 50%;
+  width: 100%;
   object-fit: cover;
   border-radius: 30px;
   float: right;
@@ -44,7 +44,7 @@ li {
   margin-bottom: 15px;
 }
 
-label, input {
+/* label, input {
   display: block;
 }
 label {
@@ -62,7 +62,7 @@ input {
   border-right: none;
   border-left: none;
   border-bottom: solid .3px;
-}
+} */
 @media (max-width: 1024px) {
   .listing-photo {
     width: 100%;
