--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ button.primary {
 }
 
 /** #####################################################
-    #   MOSTAR RESULTADO DE PORDUCTOS                   #
+    #   MOSTAR RESULTADO DE PORDUCTOS EN HOME                  #
     #####################################################*/
 .results {
   display: grid;
@@ -56,19 +56,23 @@ button.primary {
   border-radius: 30px;
   padding-bottom: 30px;
 }
+
 .listing-heading {
   color: var(--primary-color);
   padding: 10px 20px 0 20px;
 }
+
 .listing-photo {
   height: 250px;
   width: 100%;
   object-fit: cover;
   border-radius: 30px 30px 0 0;
 }
+
 .listing-location {
   padding: 10px 20px 20px 20px;
 }
+
 .listing-location::before {
   content: url("/assets/location-pin.svg") / "";
 }
@@ -78,11 +82,43 @@ section.listing a {
   text-decoration: none;
   color: var(--primary-color);
 }
+
 section.listing a::after {
   content: "\203A";
   margin-left: 5px;
 }
 
+
+/** #####################################################
+    #   MOSTAR DETALLES DEL PORDUCTO                    #
+    #####################################################*/
+
+    .listing-details-photo {
+      height: 600px;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 30px;
+      float: right;
+    }
+    
+    .listing-details-heading {
+      font-size: 48pt;
+      font-weight: bold;
+      margin-bottom: 15px;
+      color: var(--primary-color);
+      padding: 10px 20px 0 20px;
+    }
+
+    
+    .listing-details-location {
+      font-size: 24pt;
+      margin-bottom: 15px;
+      padding: 10px 20px 20px 20px;
+    }
+
+    .listing-details-location::before {
+      content: url("/assets/location-pin.svg") / "";
+    }
 
 /** #####################################################
     #                 GENERIC                           #
@@ -114,19 +150,19 @@ input[type="text"] {
 /** #####################################################
     #                      ESTILO LISTAS                #
     #####################################################*/
-    .listStyle {
-      list-style-type: disc;
-      margin-right: 15px;
-    }
-    
-    #textid ul {
-      list-style-type: disc;
-      margin-right: 15px;
-    }
-    
-    #textid ul li {
-      margin-right: 8px !important;
-    }
+.listStyle {
+  list-style-type: disc;
+  margin-right: 15px;
+}
+
+#textid ul {
+  list-style-type: disc;
+  margin-right: 15px;
+}
+
+#textid ul li {
+  margin-right: 8px !important;
+}
 
 /** #####################################################
     #                 FLEX                              #
@@ -288,7 +324,8 @@ input[type="text"] {
   input[type="text"] {
     width: 70%;
   }
-  .flex-container{
+
+  .flex-container {
     flex-direction: column-reverse;
   }
 }
@@ -297,7 +334,8 @@ input[type="text"] {
   .results {
     grid-template-columns: 1fr;
   }
-  .flex-container{
+
+  .flex-container {
     flex-direction: column-reverse;
   }
 }
