--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -3,8 +3,8 @@
     <div class="flex-container">
         <div class="flex-container-col">
             <section class="listing-description">
-                <h2 class="listing-details-heading">{{coursHoney?.title}}</h2>
-                <p class="listing-details-location">{{coursHoney?.ubication}}</p>
+                <h2 class="listing-heading">{{coursHoney?.title}}</h2>
+                <p class="listing-location">{{coursHoney?.ubication}}</p>
                 <p class="">Precio: {{coursHoney?.price}}</p>
 
                 <ul>
@@ -14,7 +14,7 @@
             </section>
         </div>
         <div>
-            <img class="listing-details-photo" [src]="coursHoney?.photo"
+            <img class="listing-photo" [src]="coursHoney?.photo"
                 alt="Exterior photo of {{coursHoney?.title}}" />
         </div>
     </div>
