--- a/src/app/products/material-honey/details-material/details-material.component.html
+++ b/src/app/products/material-honey/details-material/details-material.component.html
@@ -1,1 +1,24 @@
-<p>details-material works!</p>
+<article
+    [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+    <div class="flex-container">
+        <div class="flex-container-col">
+            <section class="listing-description">
+                <h2 class="listing-heading">{{materialHoney?.title}}</h2>
+                <p class="listing-location">{{materialHoney?.ubication}}</p>
+                <p class="">Precio: {{materialHoney?.price}}</p>
+
+                <ul>
+                    <li>Ubicación: {{materialHoney?.ubication}}</li>
+                    <li>duracion: {{materialHoney?.duration}}</li>
+                </ul>
+            </section>
+        </div>
+        <div>
+            <img class="listing-photo" [src]="materialHoney?.photo"
+                alt="Exterior photo of {{materialHoney?.title}}" />
+        </div>
+        <section class="listing-apply"></section>
+    </div>
+
+
+</article>
