--- a/src/app/products/material-honey/material-honey.component.html
+++ b/src/app/products/material-honey/material-honey.component.html
@@ -2,5 +2,5 @@
     <img class="listing-photo" [src]="materialHoney.photo" alt="Exterior photo of {{materialHoney.title}}">
     <h2 class="listing-heading">{{ materialHoney.title }}</h2>
     <p class="listing-location">{{ materialHoney.ubication}}, {{materialHoney.price }}</p>
-    <!-- <a [routerLink]="['/details', coursHoney.id]">Learn More</a> -->
+    <a [routerLink]="['/detailsMaterial', materialHoney.id]">Learn More</a>
   </section>
