incluir el componente team al detalle del curso

--- a/src/app/products/courses-honey/cours-team/cours-team.component.html
+++ b/src/app/products/courses-honey/cours-team/cours-team.component.html
@@ -1,1 +1,7 @@
-<p>cours-team works!</p>
+<section class="listing">
+    <img class="listing-photo" [src]="" alt="Exterior photo of {{staff.name}}">
+    <h2 class="">{{ staff.name }}</h2>
+    <p class="">{{ staff.role}}</p>
+    <p class="">{{ staff.description}}</p>
+       
+</section>
