incluir el componente cours en el menu principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,13 @@
             </a>
 
         </nav>
+        <nav class="flex-header-row">
+            <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                routerLink="/cours">
+                Coursos
+            </a>
+
+        </nav>
         <div>
             <app-switch-lang></app-switch-lang>
             <app-menuburger></app-menuburger>
