--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,16 +4,16 @@
     <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
   </form>
 </section>
-<h1>Mieles</h1>
+<h1>{{'Honeys'|translate}}</h1>
 <section class="results">
   <app-housing-location *ngFor="let housingLocation of filteredLocationList" [housingLocation]="housingLocation">
   </app-housing-location>
 </section>
-<h1>Cursos</h1>
+<h1>{{'Cours.Title'|translate}}</h1>
 <section class="results">
   <app-courses-honey *ngFor="let coursHoney of coursesHoneyList" [coursHoney]="coursHoney"></app-courses-honey>
 </section>
-<h1>Materiales</h1>
+<h1>{{'Material.Title'|translate}}</h1>
 <section class="results">
   <app-material-honey *ngFor="let materialHoney of materialHoneyList" [materialHoney]="materialHoney"></app-material-honey>
 </section>
