traducciones del la APP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,21 @@
         <nav class="flex-header-row">
             <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
                 routerLink="/blog">
-                blog
+                {{'Blog.Title'|translate}}
             </a>
 
         </nav>
         <nav class="flex-header-row">
             <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
                 routerLink="/cours">
-                Coursos
+                {{'Cours.Title'|translate}}
+            </a>
+
+        </nav>
+        <nav class="flex-header-row">
+            <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                routerLink="/about">
+                {{'About.Title'|translate}}
             </a>
 
         </nav>
