nuevo componente DElivery incluido en el about con su route para el footer

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,10 @@
-<p>about works!</p>
+<section class="flex-container">
+    <section>
+        <app-delivery></app-delivery>
+    </section>
+    <section>
+        <app-policies></app-policies>
+    </section>
+
+
+</section>
