--- a/src/app/about/policies/policies.component.html
+++ b/src/app/about/policies/policies.component.html
@@ -1,6 +1,5 @@
 <section>
-    <div class="flex-container"
-        [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+    <div class="flex-container ltr">
         <div class="flex-container-col">
             <h2>Condition de ventes</h2>
             <p>Nous nous engageons à fournir des produits de qualité supérieure à nos clients. Si pour une raison
