--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -163,12 +163,12 @@
             <h4 class="title">{{ 'Info' | translate}}</h4>
             <!-- <h4 class="AlignTxtCenter styleTitle"></h4> -->
             <nav class="flex-container-col">
-                <a class="honey-color" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/blog">
+                <a class="honey-color" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/policies">
                     {{ 'Policies.PoliciesTitle' | translate}}
                     
                 </a>
                 <a class="honey-color" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                    routerLink="/benefit">
+                    routerLink="/delivery">
                     {{ 'Delivery.DeliveryTitle' | translate}}
                    
                 </a>
