Aumtentar el contenido del About con los nuevos componentes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,8 @@
 <section>
     <section>
+        <app-whereare></app-whereare>
+    </section>
+    <section>
         <app-delivery></app-delivery>
     </section>
     <section>
