--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -1,1 +1,4 @@
-<p>whereare works!</p>
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+    <p>whereare works!</p>
+</section>
+
