--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,21 @@
-<section>
-    <section>
-        <app-whereare></app-whereare>
-    </section>
-    <section>
-        <app-delivery></app-delivery>
-    </section>
-    <section>
-        <app-policies></app-policies>
-    </section>
+<section class="flex-container">
+    <div class="flex-container-col">
+        <section>
+            <app-whereare></app-whereare>
+        </section>
+        <section>
+            <app-contact-us></app-contact-us>
+        </section>
+        <section>
+            <app-delivery></app-delivery>
+        </section>
+        <section>
+            <app-policies></app-policies>
+        </section>
+    
+    </div>
+   
+    
 
 
 </section>
