--- a/src/app/about/follow-us/follow-us.component.html
+++ b/src/app/about/follow-us/follow-us.component.html
@@ -1,5 +1,5 @@
 <Section>
-    <p>contact-us works!</p>
+    <h2>contact-us works!</h2>
     <div class="social-buttons">
         <a href="#" class="social-button linkedin">
             <svg viewBox="0 -2 44 44" version="1.1" xmlns="http://www.w3.org/2000/svg"
