traducciones del componente

--- a/src/app/about/follow-us/follow-us.component.html
+++ b/src/app/about/follow-us/follow-us.component.html
@@ -1,5 +1,5 @@
 <Section>
-    <h2>contact-us works!</h2>
+    <h4 class="title">{{ 'Follow_Us' | translate}}</h4>
     <div class="social-buttons">
         <a href="#" class="social-button linkedin">
             <svg viewBox="0 -2 44 44" version="1.1" xmlns="http://www.w3.org/2000/svg"
