incluir el componente Follow-Us en el footer

--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -1,4 +1,10 @@
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-    <p>whereare works!</p>
+    <p>جهة الرباط - سلا - زمور- زعير هي إحدى الجهات الستة عشرة التي تؤلف المغرب. تقع جهة الرباط - سلا - زمور- زعير في
+        الشمال الغربي للمملكة، على الهضبة الوسطى.
+        التي يغطي جزءا كبيرا منها إقليم الخميسات، وكذا الهضبة الساحلية التي تمتد على ولاية الرباط - سلا. تحد من الشمال
+        والشمال الشرقي بجهة الغرب - الشراردة - بني حسن، ومن الغرب بالمحيط الأطلسي، ومن الشرق والجنوب الشرقي بجهة مكناس-
+        تافيلالت،
+        ومن الجنوب والجنوب الغربي بجهة الشاوية - ورديغة تمتد الجهة على مساحة تقدر ب 9580كلم²، أي بنسبة 1,3% من المساحة
+        الإجمالية للبلاد، وتضم 3 عمالات وإقليم واحد.
+    </p>
 </section>
-
