añadir la etiqueta address para la dirección

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
             <div class="flex-container-col">
 
                 <!-- <span class="spanMHS"></span> -->
-                <span class="honey-color">{{'Adress' | translate}}</span>
+                <address class="honey-color">{{'Adress' | translate}}</address>
                 <span class="honey-color">00212669671149</span>
                 <span class="honey-color">testgmailcom</span>
             </div>
