--- a/src/app/about/contact-us/contact-us.component.html
+++ b/src/app/about/contact-us/contact-us.component.html
@@ -1,3 +1,44 @@
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+    <h3>{{'About.Contact_Us.Title'|translate}}</h3>
+    <ul class="footer-block__details-content list-unstyled">
+        <li>
+            <p class="footer-grid2-p"><span> <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M7.05722 0.159234C7.30985 -0.0530779 7.69053 -0.0530779 7.94316 0.159234L13.9426 7.62249C14.1492 7.79634 14.2205 8.07288 14.1226 8.3173C14.0245 8.56232 13.7759 8.72362 13.4992 8.72362H12.8326V13.9085V14.5384H11.4995H3.50006H2.16687V13.9085V8.72362H1.50028C1.22366 8.72362 0.975633 8.56232 0.877672 8.3173C0.779007 8.07288 0.851033 7.79634 1.05766 7.62249L7.05722 0.159234Z"
+                            fill="#FEF0D1"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M7.49995 1.45386L2.31531 7.75385H5.77174H9.1504H12.6846L7.49995 1.45386ZM7.49995 5.86385H4.04352L5.77174 7.75385L7.49995 5.86385ZM7.49995 5.86385L9.1504 7.75385L10.9564 5.86385H7.49995ZM7.49995 5.86385L5.77174 3.97385C5.77174 3.97385 9.22627 3.96763 9.1504 3.97385C9.23007 3.98008 7.49995 5.86385 7.49995 5.86385Z"
+                            fill="#181611"></path>
+                    </svg>
+                </span> 3ayn 3awda </p>
+        </li>
+        <li>
+            <p class="footer-grid2-p"><span><svg width="17" height="17" viewBox="0 0 17 17" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M14.1667 7.79095H15.5833C15.5833 4.1572 12.84 1.41666 9.20126 1.41666V2.83332C12.0785 2.83332 14.1667 4.91795 14.1667 7.79095Z"
+                            fill="#FEF0D1"></path>
+                        <path
+                            d="M9.20838 5.66669C10.698 5.66669 11.3334 6.30207 11.3334 7.79169H12.75C12.75 5.50732 11.4928 4.25003 9.20838 4.25003V5.66669ZM11.6323 9.52215C11.4962 9.39844 11.3173 9.33247 11.1335 9.33815C10.9497 9.34383 10.7752 9.42073 10.647 9.55261L8.95196 11.2958C8.54396 11.2179 7.72371 10.9622 6.87938 10.12C6.03505 9.27494 5.77934 8.45257 5.70355 8.0474L7.44534 6.35165C7.57738 6.22353 7.65439 6.04907 7.66008 5.86517C7.66576 5.68128 7.59967 5.50239 7.4758 5.36636L4.85851 2.4884C4.73458 2.35195 4.56234 2.26918 4.37836 2.25767C4.19439 2.24616 4.01318 2.30683 3.87321 2.42678L2.33613 3.74499C2.21367 3.86789 2.14057 4.03147 2.13071 4.20469C2.12009 4.38178 1.91751 8.57653 5.17017 11.8306C8.00776 14.6675 11.5622 14.875 12.5411 14.875C12.6842 14.875 12.772 14.8708 12.7954 14.8694C12.9686 14.8597 13.1321 14.7862 13.2544 14.6632L14.5719 13.1254C14.6919 12.9856 14.7527 12.8044 14.7413 12.6204C14.73 12.4365 14.6473 12.2642 14.511 12.1402L11.6323 9.52215Z"
+                            fill="#FEF0D1"></path>
+                    </svg>
+                </span> +212 66XXXXXXXXX</p>
+        </li>
+        <li>
+            <p class="footer-grid2-p">
+                <span>
+                    <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M3.26667 3.16666C2.82054 3.16666 2.43087 3.39644 2.20534 3.74309L9.15221 10.69C9.40806 10.9458 9.79194 10.9458 10.0478 10.69L16.9947 3.74309C16.7691 3.39644 16.3795 3.16666 15.9333 3.16666H3.26667ZM2 5.3289V14.5667C2 15.2684 2.56493 15.8333 3.26667 15.8333H15.9333C16.6351 15.8333 17.2 15.2684 17.2 14.5667V5.3289L10.9434 11.5855C10.2068 12.3221 8.9932 12.3221 8.25664 11.5855L2 5.3289Z"
+                            fill="#FEF0D1"></path>
+                    </svg>
+
+                </span>contact.ma
+            </p>
+        </li>
+    </ul>
+</section>
 <section>
     <app-follow-us></app-follow-us>
 </section>
