--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -1,6 +1,6 @@
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <h3>{{'About.whereAre.Title'|translate}}</h3>
     <p>
-        <span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}
+        <q><span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}</q>
     </p>
 </section>
