incluir el componente Contact US al APP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,17 +45,9 @@
             <app-follow-us></app-follow-us>
         </section>
 
-        <div>
-            <!-- <h4 class="styleTitle">{{ 'Contact_Us' | translate}}</h4> -->
-            <h4 class="title">{{ 'Contact_Us' | translate}}</h4>
-            <div class="flex-container-col">
-
-                <!-- <span class="spanMHS"></span> -->
-                <address class="honey-color">{{'Adress' | translate}}</address>
-                <span class="honey-color">00212669671149</span>
-                <span class="honey-color">testgmailcom</span>
-            </div>
-        </div>
+        <section>
+            <app-contact-us></app-contact-us>
+        </section>
 
         <div>
             <!-- <h4 class="AlignTxtCenter styleTitle">{{ 'About_Us' | translate}}</h4> -->
