incluir la seccion followUS en el About

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,6 +7,9 @@
             <app-contact-us></app-contact-us>
         </section>
         <section>
+            <app-follow-us></app-follow-us>
+        </section>
+        <section>
             <app-delivery></app-delivery>
         </section>
         <section>
