--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,9 +3,11 @@
         <section>
             <app-whereare></app-whereare>
         </section>
-        <section>
-            <app-contact-us></app-contact-us>
-        </section>
+        <div class="aligneSelf">
+            <section>
+                <app-contact-us></app-contact-us>
+            </section>
+        </div>
         <section>
             <app-follow-us></app-follow-us>
         </section>
@@ -15,10 +17,10 @@
         <section>
             <app-policies></app-policies>
         </section>
-    
+
     </div>
-   
-    
+
+
 
 
 </section>
