--- a/src/app/about/delivery/delivery.component.html
+++ b/src/app/about/delivery/delivery.component.html
@@ -1,7 +1,7 @@
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <div class="flex-container">
         <div class="flex-container-col">
-            <h3>{{'Delivery.DeliveryTitle' | translate}}</h3>
+            <h3 class="title">{{'Delivery.DeliveryTitle' | translate}}</h3>
             <div class="rte">
                 <p>{{'Delivery.Deliver_Anywhere' | translate}}</p>
             </div>
