--- a/src/styles.css
+++ b/src/styles.css
@@ -144,7 +144,7 @@ input[type="text"] {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  color: var(--honey-color);
+  /* color: var(--honey-color); */
 }
 
 /** #####################################################
