--- a/src/app/about/delivery/delivery.component.html
+++ b/src/app/about/delivery/delivery.component.html
@@ -1,9 +1,9 @@
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <div class="flex-container">
         <div class="flex-container-col">
-            <h3 class="title">{{'Delivery.DeliveryTitle' | translate}}</h3>
+            <h3 class="title">{{'About.Delivery.Title' | translate}}</h3>
             <div class="rte">
-                <p>{{'Delivery.Deliver_Anywhere' | translate}}</p>
+                <p>{{'About.Delivery.Deliver_Anywhere' | translate}}</p>
             </div>
 
             <div class="loader">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="rte">
-                <p>{{'Delivery.Cash_Delivery'| translate}}</p>
+                <p>{{'About.Delivery.Cash_Delivery'| translate}}</p>
             </div>
         </div>
     </div>
