--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,14 +3,16 @@
         <section>
             <app-whereare></app-whereare>
         </section>
-        <div class="aligneSelf">
+
+        <div class="flex-container-row aligneSelf">
             <section>
                 <app-contact-us></app-contact-us>
             </section>
+            <section>
+                <app-follow-us></app-follow-us>
+            </section>
         </div>
-        <section>
-            <app-follow-us></app-follow-us>
-        </section>
+
         <section>
             <app-delivery></app-delivery>
         </section>
